# intro-ppl

./: README.md  index.html
demos/pymc_wc/: README.md  pyproject.toml  worldcup_trueskill.ipynb
notebooks/Jun-19/: README.md  activity-1-complete-the-evaluator.ipynb  activity-2-ess-and-proposals.ipynb  pyproject.toml
notebooks/Jun-19/minippl/: __init__.py  distributions.py  primitives.py  sexpr.py
notebooks/Jun-22/: activity-3-single-site-mh.ipynb
notebooks/Jun-24/: activity-4-smc.ipynb
notebooks/Jun-26/: activity-5-messaging-student.ipynb
