[project]
name = "TrueSkill-WC"
version = "0.1.0"
description = "TrueSkill PyMC model for the 2026 FIFA World Cup"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pymc>=5.10",
    "arviz>=0.17",
    "numpy>=1.26",
    "scipy>=1.11",
    "pandas>=2.1",
    "seaborn>=0.13",
    "matplotlib>=3.8",
    "ipykernel>=6.29",
    "nbformat>=5.9",
    "nbconvert>=7.10",
    "jupyterlab>=4.0",
]
